--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta="UTF-8">
+    <meta charset="UTF-8">
     <title>9章演習</title>
-    <link rel="stylesheet" hlef="style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header></header>
