--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
     <main>
       <div class="step-box">
         <div class="step-img1"></div>
-        <span class="step-nun">step1</span>
+        <span class="step-num">step1</span>
         <h3 class="title">タイトルが入ります</h3>
         <p class="text">
-          "文章が入ります。文章が入ります。文章が入ります。
-        文章が入ります。文章が入ります。文章が入ります。文章が入ります。"
+          文章が入ります。文章が入ります。文章が入ります。
+        文章が入ります。文章が入ります。文章が入ります。文章が入ります。
         </p>
       </div>
       <div class="step-box">
-        <div class="step-imag2"></div>
-        <span class="step-nun">step2</span>
+        <div class="step-img2"></div>
+        <span class="step-num">step2</span>
         <h3 class="title">タイトルが入ります</h3>
         <p class="text">
-          "文章が入ります。文章が入ります。文章が入ります。文章が入ります。
-          文章が入ります。文章が入ります。文章が入ります。文章が入ります。"
+          文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+          文章が入ります。文章が入ります。文章が入ります。文章が入ります。
         </p>
       </div>
       <div class="step-box">
-      <div class="step-imag3"></div>
-      <span class="step-nun">step3</span>
-      <h3 class="title">タイトルが入ります</h3>
-      <p class="text">
-        "文章が入ります。文章が入ります。文章が入ります。
-        文章が入ります。文章が入ります。文章が入ります。文章が入ります。"
-      </p>
+       <div class="step-img3"></div>
+       <span class="step-num">step3</span>
+       <h3 class="title">タイトルが入ります</h3>
+       <p class="text">
+        文章が入ります。文章が入ります。文章が入ります。
+        文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+       </p>
       </div>
     </main>
     <footer></footer>
